@@ -3146,12 +3146,6 @@ name|callPostCommitCallbacks
 argument_list|()
 expr_stmt|;
 block|}
-else|else
-block|{
-name|callPostSoftCommitCallbacks
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 finally|finally
 block|{
@@ -3228,7 +3222,9 @@ name|cmd
 argument_list|)
 expr_stmt|;
 block|}
-comment|// ulog.postSoftCommit();
+name|callPostSoftCommitCallbacks
+argument_list|()
+expr_stmt|;
 block|}
 else|else
 block|{
